--- a/stylesheets/utilities.less
+++ b/stylesheets/utilities.less
@@ -6,7 +6,7 @@
   line-height: 100%;
   border-radius: @component-border-radius;
   margin-left: @component-icon-padding;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Oxygen-Sans, Helvetica, Arial, sans-serif;
   font-size: @font-size - 1px;
   padding: @component-padding / 2;
 }
